# genai-example-simplebot

./: .gitignore  README.md  get_models.py  main.py  pyproject.toml
